--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
     "name": "ch.cpnv.books",
+    "author": "Doran Kayoumi",
+    "license": "MIT",
     "version": "1.0.0",
     "displayName": "Find My Books",
+    "description": "Project under the MOB1 course in the CPNV",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/kayoumido/Find-my-books.git"
+    },
     "cordova": {
         "platforms": [
-            "android"
+            "android",
+            "browser"
         ],
         "plugins": {
             "cordova-plugin-console": {},
