--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
             "cordova-plugin-console": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-browsersync": {},
             "phonegap-plugin-barcodescanner": {
                 "CAMERA_USAGE_DESCRIPTION": "To scan barcodes"
-            }
+            },
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-browsersync": {}
         }
     },
     "dependencies": {
@@ -30,6 +31,7 @@
         "cordova-plugin-browsersync": "^0.1.6",
         "cordova-plugin-compat": "^1.0.0",
         "cordova-plugin-console": "~1.0.1",
+        "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-statusbar": "~1.0.1",
         "cordova-plugin-whitelist": "~1.2.0",
         "phonegap-plugin-barcodescanner": "^6.0.6"
